# gmd

./: .gitignore  CMakeLists.txt  README.md  ROADMAP  vcpkg.json
.cache/clangd/index/: Config.hpp.729121199A59DDEE.idx  Header.cpp.3BB78C802552FADC.idx  Header.hpp.9EEAF940BE25F966.idx  HeaderSpec.cpp.0BF7860BD81A2073.idx  Main.cpp.9BF0E77A3B606B25.idx  Regex.hpp.C4DE4D9769D01B79.idx  Source.cpp.36D7F1A9F57C93B1.idx  Source.hpp.E9C5BF36499A431A.idx  Utillities.cpp.8EDBB28E48A32B16.idx  Utillities.hpp.48B22A51610EED8A.idx
Resources/: showcase.mkv
Source/: Config.hpp  Header.cpp  Header.hpp  Main.cpp  PathResolver.cpp  PathResolver.hpp  Source.cpp  Source.hpp  Utillities.cpp  Utillities.hpp
Tests/: HeaderSpec.cpp  PathResolverSpec.cpp  SourceSpec.cpp  Util.cpp  Util.hpp  UtillitiesSpec.cpp
